src/test/ui/wf/wf-enum-bound.stderr
error[E0277]: the trait bound `U: Copy` is not satisfied
  --> $DIR/wf-enum-bound.rs:10:14
   |
LL | trait ExtraCopy<T:Copy> { }
   |                   ---- required by this bound in `ExtraCopy`
...
LL |     where T: ExtraCopy<U>
   |              ^^^^^^^^^^^^ the trait `Copy` is not implemented for `U`
   |
help: consider further restricting type parameter `U`
   |
LL |     where T: ExtraCopy<U>, U: std::marker::Copy
   |                          ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
